# unifi_gatway_refacoty

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  bandit.yaml  const.py  dashbord.yaml  diagnostics.py  hacs.json  manifest.json  mypy.ini  pyproject.toml  requirements.txt  sensor.py  unifi_client.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/.storage/: repairs.issue_registry
custom_components/: button.py  manifest.json  migrations.py
custom_components/unifi_gateway_refactored/: __init__.py  async_client.py  async_wrapper.py  binary_sensor.py  button.py  client_factory.py  cloud_client.py  config.py  config_flow.py  const.py  coordinator.py  diagnostics.py  errors.py  manifest.json  mixins.py  monitor.py  sensor.py  (+4 more)
tests/: __init__.py  conftest.py  helpers.py  stubs.py  test_async_wrapper.py  test_cloud_client.py  test_cloud_ipv6.py  test_config_flow.py  test_config_flow_options.py  test_coordinator.py  test_coordinator_cloud_ipv6.py  test_coordinator_refresh.py  test_diagnostics.py  test_init.py  test_init_helpers.py  test_monitor.py  test_sensor.py  test_sensor_health.py  test_sensor_health_entities.py  test_sensor_ipv6.py  test_sensor_vpn_clients.py  test_sensor_wlan_users.py  test_sensors.py  test_ui_hosts.py  test_unifi_client.py  test_unifi_client_connection.py  test_unifi_client_paths.py  test_unifi_client_v2.py  test_unifi_client_vpn.py  test_unique_ids.py  test_utils.py  test_vpn_config_list.py  test_vpn_endpoints.py  test_vpn_state.py
translations/: pl.json
(+53 files in other folders)
